--- a/inst/assets/shinyChatR.css
+++ b/inst/assets/shinyChatR.css
@@ -7,13 +7,19 @@
   box-shadow: 2px 2px 10px #ccc;
 }
 
+.chatInnerContainer {
+  width: 100%;
+  margin: 0px;
+  padding: 0px 15px 0 10px;
+}
+
 /* Chat Messages */
 .chatMessages {
   flex-grow: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
   display: flex;
   flex-direction: column-reverse;
-  padding: 5px;
+  padding: 5px 5px;
   border-radius: 5px;
   margin-bottom: 5px;
 }
@@ -21,9 +27,10 @@
 
 /* Chat Message */
 .chatMessage {
-  float: left;    
+  float: left;
+  width: auto;
   margin-bottom: 5px;
-  padding: 5px 5px 1px;
+  padding: 2px 10px 2px 5px;
   border-radius: 5px;
   background-color: #eee;
   clear: both;
@@ -32,6 +39,7 @@
 
  .chatMessage.me {
   float: right;
+  margin-left: auto;
   background-color: #2196f3;
   color: #fff;
 }
@@ -61,12 +69,20 @@
 }
 
 .chatUser {
-    text-weight: 600;
+    font-weight: 600;
+    padding: 0 8px 0 5px;
+}
+
+.chatUser {
+    font-weight: 600;
+    padding: 0 8px 0 5px;
 }
 
 .chatTime.first {
     text-align: center;
-}
+    background-color: aliceblue;
+    margin: 20px 0px;
+    padding: 4px;}
 
 .chatTime.not-first {
     display: none;
